# 2023/05/20
- Add code for TLOs/datatype
- Refactor some spell code out of common into ability
- Move some subtables out of aqo into requires
- Break up tank and assist code into a few functions incase i ever try to move more towards a state machine again
- Various class updates

# 2023/04/30
- Fix SummonID setting
- Adjust rezzing to hopefully be more proactive
- Fix npc checks on bard clickies
- Adjust enc nukes

# 2023/02/08
- manastone options only visible in ui for mana users

# 2023/02/07
- Move XTARGETHEAL to common configuration for healer classes
- All classes can now rez in combat with rez tokens
- Improve pull debug
- Reorganized init code in each of the class luas
- Fix option check for HoT heals
- Move some 10ish min CDs for bard into burns
- Add manastone configs

# 2023/02/03
- Maybe actually stopped bard crashes
- Fix error in buff requests with unrecognized spells

# 2023/02/01
- More attempts at bard clicky issues
- Med fixes
- Attempt to fix some pull return issues
- Add timestamps option

# 2023/01/31
- Longer delay after stopcast before using clickies on bard
- Remove dup DMZ zone id list
- Add 'nodmz' check to spells like lich that drain HP
- Add reagent check to pet summoning before memorizing spell
- Only click charm for geomantra if charm clicky is geomantra
- Extra debug on pull routine
- Fix spell resist event
- Check if corpse cannot be rezzed before rezzing
- Fix looting own corpse after rez

# 2023/01/30
- ASSISTNAMES to list out priority order of people to manually assist
- MEDCOMBAT to toggle whether to keep medding during combat
- Pull med settings changed to be used for medding in general
- OMM mask event

# 2023/01/29
- Some cleanup work
- Try making bard clickies less crashy

# 2023/01/27
- All the things
- UI Status Section: Added help button to open new window with all available commands
- UI General Settings: